--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <h1>Ghost Scrolling Technique</h1>
     <div id="iframe-container">
-        <iframe id="original-iframe" src="https://example.com"></iframe>
+        <iframe id="original-iframe" src="https://jalwagames2.com/#/"></iframe>
         <div id="ghost-scroller"></div>
     </div>
     <div class="controls">
